# word_counter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data.js
.github/workflows/: benchmark.yml  pr_build.yml  release.yml
benchmarks/: CMakeLists.txt  benchmark_custom.json  benchmark_results.json  main.cpp  run_benchmark.sh
dev/bench/: data.js
src/: CMakeLists.txt  word_counter.hpp
src/impl/: 0_naive.hpp  1_buffered.h  1_buffered.hpp  2_trie.hpp  3_mmap.hpp  4_robin_map.hpp  5_parallel.hpp  CMakeLists.txt  naive.hpp
tests/: CMakeLists.txt  tests.cpp
